--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "postcss": "^8.4.19",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
+    "react-router-hash-link": "^2.4.3",
     "tailwindcss": "^3.2.4"
   }
 }
