--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
     "react-icons": "^4.7.1",
+    "react-pay-icons": "^3.0.0",
     "react-router-dom": "^6.4.5",
     "react-router-hash-link": "^2.4.3",
+    "react-tooltip": "^5.3.0",
     "tailwindcss": "^3.2.4"
   }
 }
